# GeneCoder

./: .coveragerc  .flake8  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  WORKFLOWS.md  codex_setup.sh  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
.github/workflows/: automerge-comments.yml  docs.yml  python-ci.yml
dna_encoder/: __init__.py  encoder.py  formats.py  metrics.py
docs/: DEVELOPMENT_VISION.md  development_roadmap.md  features.md  index.md  installation.md  n8n_overview.md  technology_stack.md  usage.md  vision.md
openai_testing/: README.md
openai_testing/cua-server/: .gitignore
openai_testing/frontend/: .env.example
openai_testing/sample-test-app/: README.md
scripts/: only_comments_changed.py  start_flet_and_cua.sh
src/: cli.py  flet_app.py  flet_helpers.py
src/genecoder/: __init__.py  app_helpers.py  channel_sim.py  encoders.py  error_correction.py  error_detection.py  error_simulation.py  flet_app.py  flet_helpers.py  (+9 more)
tests/: __init__.py  conftest.py  test_app_helpers.py  test_channel_sim.py  test_cli.py  test_cli_additional.py  test_cli_entrypoint.py  test_cli_helpers.py  test_cli_roundtrip.py  test_cli_version.py  test_encoder.py  test_encoders.py  test_error_correction.py  test_error_detection.py  test_error_simulation.py  test_flet_helpers.py  test_formats.py  test_gc_constrained_encoder.py  test_hamming_codec.py  test_huffman_coding.py  test_metrics.py  test_only_comments_changed.py  test_plotting.py  test_reed_solomon_codec.py  test_streaming.py  test_streaming_additional.py
(+18 files in other folders)
