
[tool.ruff]
line-length = 88

  [tool.ruff.lint]
  extend-select = []

[project]
name = "GeneCoder"
version = "0.1.0"
description = "Simulated DNA data encoding & decoding toolkit"
authors = [{ name = "GeneCoder Team" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["DNA", "storage", "encoding", "simulation"]
dependencies = [
    "flet>=0.28,<0.29",
    "matplotlib",
    "reedsolo",
]

[project.scripts]
genecoder = "src.cli:main"

[project.urls]
Homepage = "https://github.com/d0tTino/GeneCoder"
Changelog = "https://github.com/d0tTino/GeneCoder/blob/main/CHANGELOG.md"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
